// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio demo -- group 1`] = `
.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c9 {
  color: #bbb;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  left: 13px;
  height: 10px;
}

.c12 .c14,
.c12 .c16 {
  line-height: 16px;
}

.c12 .c14 {
  padding-right: 20px;
}

.c12 .c16 {
  padding-left: 20px;
}

.c12 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            default
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            button
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            tag
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            1
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            2
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            3
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c6"
    >
      <div
        class="c7 c8"
      >
        <i
          class="icon__circle c9 c10 "
        />
        1
      </div>
      <div
        class="c7 c8"
      >
        <i
          class="icon__circle c9 c10 "
        />
        2
      </div>
      <div
        class="c7 c8"
      >
        <i
          class="icon__circle c9 c10 "
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-disabled 1`] = `
.c4 {
  margin-right: 8px;
}

.c2 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c5 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 .c3 {
  color: #bbb;
}

.c0 .c1,
.c0 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__circle c3 c4 "
        />
        1
      </div>
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__circle c3 c4 "
        />
        2
      </div>
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__circle c3 c4 "
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-options 1`] = `
.c4 {
  margin-right: 8px;
}

.c2 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c3 {
  color: #bbb;
}

.c0 .c1,
.c0 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        option-1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        option-2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        option-3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        radio-1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        radio-2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        radio-3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-size 1`] = `
.c3 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 22px;
  line-height: 20px;
  padding: 0 8px;
}

.c3:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c3[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c4:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c4[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 34px;
  line-height: 32px;
  padding: 0 12px;
}

.c5:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c5[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
}

.c2:hover {
  z-index: 3;
}

.c0 .style__RadioWrap-lgwvaA,
.c0 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c0 .style__RadioWrap-lgwvaA:last-child,
.c0 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-right: -1px;
}

.c0 .c1:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c1:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 c3"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 c3"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 c3"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 c4"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 c4"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 c4"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 c5"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 c5"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 c5"
        type="button"
      >
        3
      </button>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-styleType 1`] = `
.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c7:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c7[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  margin-right: 8px;
}

.c2 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c3 {
  color: #bbb;
}

.c6 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
}

.c6:hover {
  z-index: 3;
}

.c9 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c0 .c1,
.c0 .c8 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .c8:last-child {
  margin-right: 0;
}

.c0 .c5 {
  margin-right: -1px;
}

.c0 .c5:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c5:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c5 c6 c7"
        type="button"
      >
        1
      </button>
      <button
        class="c5 c6 c7"
        type="button"
      >
        2
      </button>
      <button
        class="c5 c6 c7"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c8 c9"
      >
        1
      </div>
      <div
        class="c8 c9"
      >
        2
      </div>
      <div
        class="c8 c9"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-uncontrolled 1`] = `
.c4 {
  margin-right: 8px;
}

.c2 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c3 {
  color: #bbb;
}

.c5 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c5 .c3 {
  color: #4074e1;
}

.c0 .c1,
.c0 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        1
      </div>
      <div
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__cbox-ed c3 c4 "
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        1
      </div>
      <div
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__cbox-ed c3 c4 "
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="icon__circle c3 c4 "
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio 1`] = `
.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c9 {
  color: #bbb;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  left: 13px;
  height: 10px;
}

.c12 .c14,
.c12 .c16 {
  line-height: 16px;
}

.c12 .c14 {
  padding-right: 20px;
}

.c12 .c16 {
  padding-left: 20px;
}

.c12 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            default
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            button
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            tag
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c7 c8"
    >
      <i
        class="icon__circle c9 c10 "
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-checked 1`] = `
.c3 {
  margin-right: 8px;
}

.c1 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c2 {
  color: #bbb;
}

.c4 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c4 .c2 {
  color: #4074e1;
}

.fQmWIP .c0,
.fQmWIP .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.fQmWIP .c0:last-child,
.fQmWIP .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="icon__circle c2 c3 "
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c4"
    >
      <i
        class="icon__cbox-ed c2 c3 "
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-disabled 1`] = `
.c3 {
  margin-right: 8px;
}

.c1 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c4 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 .c2 {
  color: #bbb;
}

.edZMHf .c2 {
  color: #4074e1;
}

.fQmWIP .c0,
.fQmWIP .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.fQmWIP .c0:last-child,
.fQmWIP .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="icon__circle c2 c3 "
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c4"
      disabled=""
    >
      <i
        class="icon__circle c2 c3 "
      />
      disabled
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-size 1`] = `
.c3 {
  margin-right: 8px;
}

.c4 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c2 {
  color: #bbb;
}

.edZMHf .c2 {
  color: #4074e1;
}

.c1 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
}

.c5 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
}

.fQmWIP .c0,
.fQmWIP .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.fQmWIP .c0:last-child,
.fQmWIP .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="icon__circle c2 c3 "
      />
      sm
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c4"
    >
      <i
        class="icon__circle c2 c3 "
      />
      md
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c5"
    >
      <i
        class="icon__circle c2 c3 "
      />
      lg
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-styleType 1`] = `
.c6 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c6:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c6[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  margin-right: 8px;
}

.c1 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.ilMmro .c2 {
  color: #bbb;
}

.edZMHf .c2 {
  color: #4074e1;
}

.c5 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
}

.c5:hover {
  z-index: 3;
}

.c8 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.fQmWIP .c0,
.fQmWIP .c7 {
  margin-right: 8px;
}

.fQmWIP .c0:last-child,
.fQmWIP .c7:last-child {
  margin-right: 0;
}

.fQmWIP .c4 {
  margin-right: -1px;
}

.fQmWIP .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.fQmWIP .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="icon__circle c2 c3 "
      />
      default
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="c4 c5 c6"
      type="button"
    >
      button
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c7 c8"
    >
      tag
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-uncontrolled 1`] = `
.c3 {
  margin-right: 8px;
}

.ilMmro .c2 {
  color: #bbb;
}

.c1 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 .c2 {
  color: #4074e1;
}

.fQmWIP .c0,
.fQmWIP .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.fQmWIP .c0:last-child,
.fQmWIP .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c1"
    >
      <i
        class="icon__cbox-ed c2 c3 "
      />
      controlled
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c1"
    >
      <i
        class="icon__cbox-ed c2 c3 "
      />
      uncontrolled
    </div>
  </div>
</div>
`;
